operator/src/desired/snapshots/balerix_operator__desired__daemon__tests__daemon_claims.snap
---
source: src/desired/daemon.rs
expression: o.claims
---
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app.kubernetes.io/managed-by: balerix-operator
      balerix.ai/component: daemon
      balerix.ai/daemon: default
    name: balerix-default-state
    namespace: team-a
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 5Gi
    storageClassName: standard
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app.kubernetes.io/managed-by: balerix-operator
      balerix.ai/component: daemon
      balerix.ai/daemon: default
    name: balerix-default-shared
    namespace: team-a
  spec:
    accessModes:
      - ReadWriteMany
    resources:
      requests:
        storage: 100Gi
    storageClassName: efs
