operator/src/desired/snapshots/balerix_operator__desired__daemon__tests__daemon_config_authority.snap
---
source: src/desired/daemon.rs
expression: s.authority_config
---
apiVersion: v1
kind: ConfigMap
data:
  ca.crt: CA CERT
metadata:
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/component: daemon
    balerix.ai/daemon: default
  name: balerix-default-ca
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Daemon
      name: default
      uid: daemon-uid
