operator/src/desired/snapshots/balerix_operator__desired__daemon__tests__daemon_secret_admin.snap
---
source: src/desired/daemon.rs
expression: s.admin
---
apiVersion: v1
kind: Secret
metadata:
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/component: daemon
    balerix.ai/daemon: default
  name: balerix-default-admin
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Daemon
      name: default
      uid: daemon-uid
stringData:
  token: ADMIN TOKEN
type: Opaque
