operator/src/desired/snapshots/balerix_operator__desired__daemon__tests__daemon_secret_authority.snap
---
source: src/desired/daemon.rs
expression: s.authority
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    balerix.ai/not-after: "2115360000"
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/component: daemon
    balerix.ai/daemon: default
  name: balerix-default-ca
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Daemon
      name: default
      uid: daemon-uid
stringData:
  ca.crt: CA CERT
  ca.key: CA KEY
type: Opaque
