operator/src/desired/snapshots/balerix_operator__desired__daemon__tests__daemon_secret_serving.snap
---
source: src/desired/daemon.rs
expression: s.serving
---
apiVersion: v1
kind: Secret
metadata:
  annotations:
    balerix.ai/not-after: "1807776000"
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/component: daemon
    balerix.ai/daemon: default
  name: balerix-default-tls
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Daemon
      name: default
      uid: daemon-uid
stringData:
  tls.crt: TLS CERT
  tls.key: TLS KEY
type: kubernetes.io/tls
