operator/src/desired/snapshots/balerix_operator__desired__daemon__tests__daemon_service.snap
---
source: src/desired/daemon.rs
expression: o.service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/component: daemon
    balerix.ai/daemon: default
  name: balerix-default
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Daemon
      name: default
      uid: daemon-uid
spec:
  ports:
    - name: https
      port: 7643
      targetPort: https
  selector:
    balerix.ai/component: daemon
    balerix.ai/daemon: default
